# homework_drf

./: .coverage  .env_example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: auth_data.json  groups.json  materials_data.json  users_data.json
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_link.py  0003_course_owner_lesson_owner.py  0004_subscribe.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: created_users.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_alter_user_options_payment.py  0004_alter_payment_user.py  0005_payment_link_payment_session_id.py  0006_alter_payment_amount_payment.py
