[tool.poetry]
name = "homework-drf"
version = "0.1.0"
description = ""
authors = ["Sergey Shershikov <ssher250110@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
stripe = "^9.9.0"
forex-python = "^1.8"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
